jx-h42 sensor driver begin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ add_executable(tools_hi_vi_reg tools/hi_vireg.c platform/sdk_ugly.c)
 add_library(sns_imx225_i2c_720p SHARED imx225_i2c/imx225_cmos.c imx225_i2c/imx225_sensor_ctl.c)
 add_library(sns_imx225_i2c_960h SHARED imx225_i2c_960h/imx225_cmos.c imx225_i2c_960h/imx225_sensor_ctl.c)
 add_library(sns_imx225_spi_720p SHARED imx225_spi/imx225_cmos.c imx225_spi/imx225_sensor_ctl.c)
+add_library(sns_jxh427_i2c SHARED jxh427_i2c/jxh42_sensor_ctl.c jxh427_i2c/jxh42_cmos.c)
 
 add_executable(sample_audio test/sample_audio/sample_audio.c test/sample_audio/sample_comm_audio.c test/sample_audio/sample_comm_sys.c platform/sdk_ugly.c)
 target_link_libraries(sample_audio ${VENDOR_SDK_LIBRARIES} gcc_s hisicompat)
