very draft version of upload, works...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
 
 find_package(HiSiliconSDK REQUIRED)
 find_package(Threads REQUIRED)
+find_library(CURL_LIBRARY NAMES curl)
 
 include_directories(${CMAKE_SOURCE_DIR})
 include_directories(${VENDOR_SDK_INCLUDE_DIRS})
@@ -19,6 +20,7 @@ endif()
 add_library(hisinad_aux STATIC aux/logger.c aux/system.c)
 add_library(hisinad_cfg STATIC cfg/common.c cfg/sensor_config.c cfg/sensor_cfg_print.c)
 add_library(libevx STATIC libev/ev.c)
+add_library(evcurl STATIC evcurl/evcurl.c)
 
 add_executable(test_cfg_read test/test_cfg_read.c cfg/common.c)
 add_executable(test_cfg_sensor test/test_cfg_sensor.c)
@@ -60,7 +62,7 @@ add_executable(tools_vi_dump_nosdk tools/vi_dump_nosdk.c hitiny/hitiny_vi.c hiti
 target_link_libraries(tools_vi_dump_nosdk hisinad_aux)
 
 add_executable(hisina-md-tune tools/hisina-md-tune/mjpeg_snap.c tools/hisina-md-tune/main.c hitiny/hitiny_sys.c hitiny/hitiny_vda.c cfg/vdacfg.c cfg/common.c hitiny/hitiny_venc_fd.c)
-target_link_libraries(hisina-md-tune hisinad_aux libevx)
+target_link_libraries(hisina-md-tune evcurl hisinad_aux ${CURL_LIBRARY} libevx)
 
 add_executable(tools_vi_ive_hist tools/vi_ive_hist.c)
 target_link_libraries(tools_vi_ive_hist ${VENDOR_SDK_LIBRARIES} gcc_s hisicompat)
