--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,8 @@ add_executable(test_cfg_read test/test_cfg_read.c cfg/common.c)
 add_executable(test_cfg_sensor test/test_cfg_sensor.c)
 target_link_libraries(test_cfg_sensor hisinad_cfg)
 
+add_executable(test_tinydraw_0 test/test_tinydraw_0.c tinydraw/image.c tinydraw/save_bmp.c)
+
 add_executable(test_pumap_vi test/test_pumap_vi.c pumap/vi.c)
 
 if (CMAKE_SYSTEM_PROCESSOR STREQUAL armv5l)
